--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@ autostart="1">
 
 <input type="button" value="ΕΑΕΠ Α. Παρασκευής" onclick="window.open(&#39;https://rawcdn.githack.com/grchannels/data/abf2f385843d99385f0c44c98a1471b29b6b0a65/eaep-agiaparaskevi.html&#39;,&#39;ΕΑΕΠ Α. Παρασκευής II&#39;,&#39;width=500,height=400&#39;)" />
 
-<p><input type="button" value="ΕΑΕΠ Καλλιθέας" onclick="window.open(&#39;https://rawcdn.githack.com/grchannels/data/abf2f385843d99385f0c44c98a1471b29b6b0a65/eaep-kalitheas.html&#39;,&#39;ΕΑΕΠ Καλλιθέας II&#39;,&#39;width=660,height=400&#39;)" />
+<p><input type="button" value="ΕΑΕΠ Καλλιθέας" onclick="window.open(&#39;https://www.youtube.com/channel/UChGGOzoC9Qy0bzpsyKuD9FQ/live?autoplay=1&#39;,&#39;ΕΑΕΠ Καλλιθέας&#39;,&#39;width=550,height=480&#39;)" />
 
 <input type="button" value="ΕΑΕΠ Ιλίου" onclick="window.open(&#39;https://rawcdn.githack.com/grchannels/data/abf2f385843d99385f0c44c98a1471b29b6b0a65/ilion-church.html&#39;,&#39;ΕΑΕΠ Ιλίου Ι&#39;,&#39;width=520,height=400&#39;)" />
 
@@ -124,13 +124,13 @@ autostart="1">
 
 <input type="button" value="ΕΑΕΠ Θέρμης" onclick="window.open(&#39;https://www.youtube.com/channel/UCCF4Iv4jCHWNleA7Dyi4QVA/live?autoplay=1&#39;,&#39;ΕΑΕΠ Θέρμης&#39;,&#39;width=530,height=550&#39;)" />
 
-<input type="button" value="Eκ. Θεσ/νίκης" onclick="window.open(&#39;https://www.youtube.com/channel/UCbbtMuQ-_Fwzl30ONKwvI2w/live?autoplay=1&#39;,&#39;The Christians&#39;,&#39;width=550,height=480&#39;)" />
+<input type="button" value="ΕΑΕΠ Πτολεμαίων" onclick="window.open(&#39;https://www.youtube.com/channel/UCbbtMuQ-_Fwzl30ONKwvI2w/live?autoplay=1&#39;,&#39;The Christians&#39;,&#39;width=550,height=480&#39;)" />
 
 <p><input type="button" value="Εκ. Βέροιας" onclick="window.open(&#39;https://www.youtube.com/channel/UCbzHj-1cyPcmYFbk2oBnkVA/live?autoplay=1&#39;,&#39;39;Ε. Βέροιας&#39;,&#39;width=550,height=480,top=100&#39;)" />
 
 <input type="button" value="Χρ. Εκ. Αθηνών" onclick="window.open(&#39;https://www.youtube.com/channel/UCoxKzreDVYLJ9iqzYmY1Vbg/live?autoplay=1&#39;,&#39;Χρ. Εκ. Αθηνών&#39;,&#39;width=550,height=480&#39;)" />
 
-<input type="button" value="Απ. Εκ. του Χριστού" onclick="window.open(&#39;https://www.youtube.com/channel/UCi2K8nnMivwZDyl4GbpC_AQ/live?autoplay=1&#39;,&#39;Απ. Εκ. του Χριστού&#39;,&#39;width=550,height=480&#39;)" />
+<input type="button" value="Απ. Εκ. του Χριστού" onclick="window.open(&#39;https://www.youtube.com/channel/UC-YSxzA5VmsHr9zO1IZrRbQ/live?autoplay=1&#39;,&#39;Απ. Εκ. του Χριστού&#39;,&#39;width=550,height=480&#39;)" />
 
 <input type="button" value="Ελ. Χρ. Εκ." onclick="window.open(&#39;https://www.youtube.com/channel/UCmXznSE7o9WamWOUVtWGfZw/live?autoplay=1&#39;,&#39;39;Ελληνική Χριστιανική Εκκλησία.&#39;,&#39;width=550,height=450&#39;)" />
 
@@ -160,9 +160,9 @@ autostart="1">
 
 <input type="button" value="Prophetic Channel" onclick="window.open(&#39;https://www.youtube.com/channel/UCcbBHQXuSkw8Me1vnY-u4bw/live?autoplay=1&#39;,&#39;Prophetic Channel&#39;,&#39;width=550,height=480&#39;)" />
 
-<input type="button" value="GOD TV US" onclick="window.open(&#39;https://rawcdn.githack.com/grchannels/data/abf2f385843d99385f0c44c98a1471b29b6b0a65/GOD_TV_US.html&#39;,&#39;GOD TV US&#39;,&#39;width=580,height=350&#39;)" />
+<input type="button" value="GOD TV US" onclick="window.open(&#39;https://rawcdn.githack.com/grchannels/data/97c1b09cd0ec0b2e46e5c06d96e13463e1108a70/GOD_TV_US.html&#39;,&#39;GOD TV US&#39;,&#39;width=580,height=350&#39;)" />
 
-<input type="button" value="GOD TV UK" onclick="window.open(&#39;https://rawcdn.githack.com/grchannels/data/abf2f385843d99385f0c44c98a1471b29b6b0a65/GOD_TV_UK.html&#39;,&#39;GOD TV UK&#39;,&#39;width=580,height=350&#39;)" />
+<input type="button" value="GOD TV UK" onclick="window.open(&#39;https://rawcdn.githack.com/grchannels/data/15c305f524bde853ef7e2cc795f3fecaf71fcda2/GOD_TV_UK.html&#39;,&#39;GOD TV UK&#39;,&#39;width=580,height=350&#39;)" />
 
 <input type="button" value="CYWN Live" onclick="window.open(&#39;https://swf.tulix.tv/iframe/wchangerslive/index.php&#39;,&#39;World Changers&#39;,&#39;width=580,height=350&#39;)" />
 
@@ -170,15 +170,15 @@ autostart="1">
 
 <input type="button" value="TBN UK" onclick="window.open(&#39;https://watch.tbn.tv/videos/tbn-uk&#39;,&#39;TBN UK&#39;,&#39;width=550,height=480&#39;)" />
 
-<input type="button" value="CBN NEWS" onclick="window.open(&#39;https://rawcdn.githack.com/grchannels/data/abf2f385843d99385f0c44c98a1471b29b6b0a65/CBN_NEWS.html&#39;,&#39;CBN NEWS&#39;,&#39;width=580,height=350&#39;)" />
+<input type="button" value="CBN NEWS" onclick="window.open(&#39;https://rawcdn.githack.com/grchannels/data/906113a59455132a33b33543431df613dbebe1bb/CBN_NEWS.html&#39;,&#39;CBN NEWS&#39;,&#39;width=580,height=350&#39;)" />
 
-<input type="button" value="CBN TV" onclick="window.open(&#39;https://rawcdn.githack.com/grchannels/data/abf2f385843d99385f0c44c98a1471b29b6b0a65/CBN_TV.html&#39;,&#39;CBN TV&#39;,&#39;width=580,height=350&#39;)" />
+<input type="button" value="CBN TV" onclick="window.open(&#39;https://www1.cbn.com/sites/all/libraries/html5player/html5player.php?applicationId=WIDGET_VOD&platform=embedded%20widget%20player&appName=embedded%20widget%20player&ads=true&auto_play=true&muted=false&videoId=5721815535001&#39;,&#39;CBN TV&#39;,&#39;width=580,height=350&#39;)" />
 
 <input type="button" value="Hillsong Channel" onclick="window.open(&#39;https://watch.tbn.tv/videos/hillsong-channel&#39;,&#39;Hillsong Channel&#39;,&#39;width=550,height=480&#39;)" />
 
-<input type="button" value="Spirit tv" onclick="window.open(&#39;https://rawcdn.githack.com/grchannels/data/abf2f385843d99385f0c44c98a1471b29b6b0a65/spirit_tv.html&#39;,&#39;Spirit tv&#39;,&#39;width=580,height=350&#39;)" />
+<input type="button" value="Spirit tv" onclick="window.open(&#39;https://rawcdn.githack.com/grchannels/data/16c070eeb58e8a5a721bb5367a95142f33d62ee2/spirit_tv.html&#39;,&#39;Spirit tv&#39;,&#39;width=580,height=350&#39;)" />
 
-<p><input type="button" value="The Word Network" onclick="window.open(&#39;https://rawcdn.githack.com/grchannels/data/abf2f385843d99385f0c44c98a1471b29b6b0a65/The_Word_Network.html&#39;,&#39;The Word Network&#39;,&#39;width=580,height=350&#39;)" />
+<p><input type="button" value="The Word Network" onclick="window.open(&#39;https://rawcdn.githack.com/grchannels/data/81c3fc305aa7d4a488d831463eb37632cc0632c0/The_Word_Network.html&#39;,&#39;The Word Network&#39;,&#39;width=650,height=350&#39;)" />
 
 <input type="button" value="Christian Tv Network" onclick="window.open(&#39;https://rawcdn.githack.com/grchannels/data/abf2f385843d99385f0c44c98a1471b29b6b0a65/CTN.html&#39;,&#39;CTN&#39;,&#39;width=580,height=350&#39;)" />
 
