--- a/index.html
+++ b/index.html
@@ -160,6 +160,9 @@ autostart="1">
 
 <input type="button" value="Prophetic Channel" onclick="window.open(&#39;https://www.youtube.com/channel/UCcbBHQXuSkw8Me1vnY-u4bw/live?autoplay=1&#39;,&#39;Prophetic Channel&#39;,&#39;width=550,height=480&#39;)" />
 
+	
+	
+	
 <input type="button" value="GOD TV US" onclick="window.open(&#39;https://rawcdn.githack.com/grchannels/data/97c1b09cd0ec0b2e46e5c06d96e13463e1108a70/GOD_TV_US.html&#39;,&#39;GOD TV US&#39;,&#39;width=580,height=350&#39;)" />
 
 <input type="button" value="GOD TV UK" onclick="window.open(&#39;https://rawcdn.githack.com/grchannels/data/15c305f524bde853ef7e2cc795f3fecaf71fcda2/GOD_TV_UK.html&#39;,&#39;GOD TV UK&#39;,&#39;width=580,height=350&#39;)" />
@@ -179,6 +182,128 @@ autostart="1">
 <input type="button" value="Spirit tv" onclick="window.open(&#39;https://rawcdn.githack.com/grchannels/data/16c070eeb58e8a5a721bb5367a95142f33d62ee2/spirit_tv.html&#39;,&#39;Spirit tv&#39;,&#39;width=580,height=350&#39;)" />
 
 <p><input type="button" value="The Word Network" onclick="window.open(&#39;https://rawcdn.githack.com/grchannels/data/81c3fc305aa7d4a488d831463eb37632cc0632c0/The_Word_Network.html&#39;,&#39;The Word Network&#39;,&#39;width=650,height=350&#39;)" />
+
+<p><a href="http://afreeapo.fastcast4u.com/" target="_blank" onclick="window.open(this.href, this.target, 'width=650, height=400, resizable=yes, location=yes'); return false;">| Χριστιανισμός 104,3 MHz FM Αθήνα|</a>
+
+<a href="http://ekxeradio.gr/shoutcast/" target="_blank" onclick="window.open(this.href, this.target, 'top=0, left=0, height=240, width=550, resizable=yes, location=yes'); return false;">| Ράδιο EKXE |</a>
+
+<a href="https://rawcdn.githack.com/grchannels/data/fe615741e751d7e20397378383484a970c85337c/Radio Apokalipsi.html" target="_blank" onclick="window.open(this.href, this.target, 'width=350, height=100, resizable=yes, location=yes'); return false;">| Ράδιο Αποκάλυψη |</a>
+
+<p><a href="https://rawcdn.githack.com/grchannels/data/fe615741e751d7e20397378383484a970c85337c/Radio Alpha Omega Chios.html" target="_blank" onclick="window.open(this.href, this.target, 'width=350, height=100, resizable=yes, location=yes'); return false;">| Ράδιο Άλφα Ωμέγα 90.4 MHz FM Χίος |</a>
+
+<a href="https://rawcdn.githack.com/grchannels/data/fe615741e751d7e20397378383484a970c85337c/Kanali 7 Cyprus.html" target="_blank" onclick="window.open(this.href, this.target, 'width=350, height=100, resizable=yes, location=yes'); return false;">| KANALI 7 98.4 MHz FM Κύπρος |</a>
+
+<p><a href="https://rawcdn.githack.com/grchannels/data/fe615741e751d7e20397378383484a970c85337c/Diavlos Ena 99.7 FM.html" target="_blank" onclick="window.open(this.href, this.target, 'width=350, height=100, resizable=yes, location=yes'); return false;">| Δίαυλος Ένα 99.7 FM Αρκαδία |</a>
+
+<a href="https://rawcdn.githack.com/grchannels/data/b321291c4737dbd74d56780450ef44c0be9805d0/Radio_Lyxnos.html" target="_blank" onclick="window.open(this.href, this.target, 'width=300, height=100, resizable=yes, location=yes'); return false;">| Ράδιο Λύχνος |</a>
+
+<a href="https://rawcdn.githack.com/grchannels/data/fe615741e751d7e20397378383484a970c85337c/Radio Oixalia.html" target="_blank" onclick="window.open(this.href, this.target, 'width=300, height=100, resizable=yes, location=yes'); return false;">| Ράδιο Οιχαλία |</a>
+
+<a href="https://rawcdn.githack.com/grchannels/data/fe615741e751d7e20397378383484a970c85337c/Radio Christians-Rentis.html" target="_blank" onclick="window.open(this.href, this.target, 'width=350, height=100, resizable=yes, location=yes'); return false;">| Χρ. Ρέντη |</a>
+
+<p><a href="https://rawcdn.githack.com/grchannels/data/8984798489eb07897279c0b544d3e21030ef59be/H Foni tis Agapis.html" target="_blank" onclick="window.open(this.href, this.target, 'width=350, height=100, resizable=yes, location=yes'); return false;">| Η Φωνή της Αγάπης |</a>
+
+<a href="https://rawcdn.githack.com/grchannels/data/8984798489eb07897279c0b544d3e21030ef59be/Radio to Fos.html" target="_blank" onclick="window.open(this.href, this.target, 'width=350, height=100, resizable=yes, location=yes'); return false;">| Ράδιο Το Φως |</a>
+
+<!-- <a href="https://cdn.rawgit.com/grchannels/data/e53aeddd/Radio%20Xara.html" target="_blank" onclick="window.open(this.href, this.target, 'width=350, height=100, resizable=yes, location=yes'); return false;">| Ράδιο Χαρά |</a>  -->
+
+<a href="https://rawcdn.githack.com/grchannels/data/8984798489eb07897279c0b544d3e21030ef59be/Radio Christianity 90 FM.html" target="_blank" onclick="window.open(this.href, this.target, 'width=350, height=100, resizable=yes, location=yes'); return false;">| Χριστιανισμός 90 MHz FM Ρόδος|</a>
+
+<p><input type="button" value="Καινή Διαθήκη -Σπύρος Φίλος-" onclick="window.open(&#39;http://www.bible.is/radio/GRKSFTN1DA&#39;,&#39;Σπύρος Φίλος&#39;,&#39;width=500,height=530&#39;)" />
+
+   <input type="button" value="Καινή Διαθήκη -Αρχαίο 1904-" onclick="window.open(&#39;http://www.bible.is/radio/GRKEPTN1DA&#39;,&#39;Αρχαίο 1904&#39;,&#39;width=500,height=530&#39;)" />
+
+                                                        <!--"V    I    D    E    O    S" /> -->
+
+<p><input type="button" value="Word of God" onclick="window.open(&#39;http://www.wordofgod.gr/Main.aspx?lang=el&chk=1&#39;,&#39;Word of God&#39;,&#39;width=530,height=500&#39;)" />
+
+<input type="button" value="Voice of God" onclick="window.open(&#39;https://www.youtube.com/channel/UC8KnlXI3YAkOZfwMgxb1lOg/live?autoplay=1&#39;,&#39;Voice of God&#39;,&#39;width=530,height=550&#39;)" />
+
+<input type="button" value="ΕΑΕΠ Χανίων" onclick="window.open(&#39;https://rawcdn.githack.com/grchannels/data/abf2f385843d99385f0c44c98a1471b29b6b0a65/eaep-chania.html&#39;,&#39;ΕΑΕΠ Χανίων&#39;,&#39;width=650,height=390&#39;)" />
+
+<input type="button" value="ΕΑΕΠ Νάξος" onclick="window.open(&#39;https://www.youtube.com/channel/UChE05fmTBXxHp4867xKDCTg/live?autoplay=1&#39;,&#39;ΕΑΕΠ Νάξος&#39;,&#39;width=645,height=400&#39;)" />
+
+<input type="button" value="ΕΑΕΠ Tube" onclick="window.open(&#39;http://www.eaeptube.com/stream.php?mode=player&#39;,&#39;ΕΑΕΠ Tube&#39;,&#39;width=365,height=330&#39;)" />
+
+<p><input type="button" value="ΕΑΕΠ Αθηνών" onclick="window.open(&#39;https://www.youtube.com/c/RadioChristianity/live?autoplay=1&#39;,&#39;ΕΑΕΠ Αθηνών&#39;,&#39;width=550,height=480&#39;)" />
+
+<input type="button" value="ΕΑΕΠ Νίκαιας" onclick="window.open(&#39;https://rawcdn.githack.com/grchannels/data/abf2f385843d99385f0c44c98a1471b29b6b0a65/eaep_nikaias.html&#39;,&#39;ΕΑΕΠ Νίκαιας II&#39;,&#39;width=500,height=300&#39;)" />
+ 
+<input type="button" value="ΕΑΕΠ Πειραιά" onclick="window.open(&#39;https://rawcdn.githack.com/grchannels/data/abf2f385843d99385f0c44c98a1471b29b6b0a65/eaep-piraeus.html&#39;,&#39;ΕΑΕΠ Πειραιά II&#39;,&#39;width=660,height=400&#39;)" />
+
+<input type="button" value="ΕΑΕΠ Α. Παρασκευής" onclick="window.open(&#39;https://rawcdn.githack.com/grchannels/data/abf2f385843d99385f0c44c98a1471b29b6b0a65/eaep-agiaparaskevi.html&#39;,&#39;ΕΑΕΠ Α. Παρασκευής II&#39;,&#39;width=500,height=400&#39;)" />
+
+<p><input type="button" value="ΕΑΕΠ Καλλιθέας" onclick="window.open(&#39;https://www.youtube.com/channel/UChGGOzoC9Qy0bzpsyKuD9FQ/live?autoplay=1&#39;,&#39;ΕΑΕΠ Καλλιθέας&#39;,&#39;width=550,height=480&#39;)" />
+
+<input type="button" value="ΕΑΕΠ Ιλίου" onclick="window.open(&#39;https://rawcdn.githack.com/grchannels/data/abf2f385843d99385f0c44c98a1471b29b6b0a65/ilion-church.html&#39;,&#39;ΕΑΕΠ Ιλίου Ι&#39;,&#39;width=520,height=400&#39;)" />
+
+<input type="button" value="ΕΑΕΠ Ριζούπολης" onclick="window.open(&#39;https://rawcdn.githack.com/grchannels/data/abf2f385843d99385f0c44c98a1471b29b6b0a65/eaep_rizoupolis.html&#39;,&#39;ΕΑΕΠ Ριζούπολης&#39;,&#39;width=550,height=320&#39;)" />
+
+<input type="button" value="ΕΑΕΠ Περιστερίου" onclick="window.open(&#39;https://www.youtube.com/channel/UCEDColQ1D2bulOQ7yNTcZzg/live?autoplay=1&#39;,&#39;ΕΑΕΠ Περιστερίου&#39;,&#39;width=580,height=400&#39;)" />
+
+<p><input type="button" value="ΕΑΕΠ Νέου Ψυχικού" onclick="window.open(&#39;https://www.youtube.com/channel/UC5Vn3zA-RoBxmchuPVa9RNQ/live?autoplay=1&#39;,&#39;ΕΑΕΠ Αθηνών&#39;,&#39;width=550,height=480&#39;)" />
+
+<input type="button" value="ΕΑΕΠ Ηλιούπολης" onclick="window.open(&#39;https://www.youtube.com/channel/UC3NGKgJgvRiHu4b0osTf-Lg/live?autoplay=1&#39;,&#39;ΕΑΕΠ Ηλιούπολης&#39;,&#39;width=550,height=480&#39;)" />
+
+<input type="button" value="ΕΑΕΠ Λευκωσίας" onclick="window.open(&#39;https://www.youtube.com/channel/UC-fb9xpm7qyKVwbcV2V8E1A/live?autoplay=1&#39;,&#39;ΕΑΕΠ Ηλιούπολης&#39;,&#39;width=550,height=480&#39;)" />
+
+<input type="button" value="ΕΑΕΠ Θέρμης" onclick="window.open(&#39;https://www.youtube.com/channel/UCCF4Iv4jCHWNleA7Dyi4QVA/live?autoplay=1&#39;,&#39;ΕΑΕΠ Θέρμης&#39;,&#39;width=530,height=550&#39;)" />
+
+<p><input type="button" value="ΕΑΕΠ Πτολεμαίων" onclick="window.open(&#39;https://www.youtube.com/channel/UCbbtMuQ-_Fwzl30ONKwvI2w/live?autoplay=1&#39;,&#39;The Christians&#39;,&#39;width=550,height=480&#39;)" />
+
+<input type="button" value="Εκ. Βέροιας" onclick="window.open(&#39;https://www.youtube.com/channel/UCbzHj-1cyPcmYFbk2oBnkVA/live?autoplay=1&#39;,&#39;39;Ε. Βέροιας&#39;,&#39;width=550,height=480,top=100&#39;)" />
+
+<input type="button" value="Χρ. Εκ. Αθηνών" onclick="window.open(&#39;https://www.youtube.com/channel/UCoxKzreDVYLJ9iqzYmY1Vbg/live?autoplay=1&#39;,&#39;Χρ. Εκ. Αθηνών&#39;,&#39;width=550,height=480&#39;)" />
+
+<input type="button" value="Απ. Εκ. του Χριστού" onclick="window.open(&#39;https://www.youtube.com/channel/UC-YSxzA5VmsHr9zO1IZrRbQ/live?autoplay=1&#39;,&#39;Απ. Εκ. του Χριστού&#39;,&#39;width=550,height=480&#39;)" />
+
+<p><input type="button" value="Ελ. Χρ. Εκ." onclick="window.open(&#39;https://www.youtube.com/channel/UCmXznSE7o9WamWOUVtWGfZw/live?autoplay=1&#39;,&#39;39;Ελληνική Χριστιανική Εκκλησία.&#39;,&#39;width=550,height=450&#39;)" />
+
+<input type="button" value="Logos Church" onclick="window.open(&#39;https://www.youtube.com/channel/UC7zSdR2P29r-KSNnQASJfPA/live?autoplay=1&#39;,&#39;Logos Church&#39;,&#39;width=550,height=480&#39;)" />
+
+<input type="button" value="Apokalipsi WebTV" onclick="window.open(&#39;https://www.youtube.com/user/ApokalipsiWebTV/live?autoplay=1&#39;,&#39;Αποκάλυψη Web TV&#39;,&#39;width=550,height=480&#39;)" />
+
+<p><input type="button" value="Ά Ε.Ε.Ε. Αθηνών" onclick="window.open(&#39;https://www.youtube.com/channel/UCTAX0vTN9xgk6gu9uUx65zQ/live?autoplay=1&#39;,&#39;Ά Ελληνική Ευαγγελική Εκκλησία Αθηνών&#39;,&#39;width=480,height=400&#39;)" />
+
+<input type="button" value="Ε.Ε.Ε. Πεύκης" onclick="window.open(&#39;https://www.youtube.com/c/EeepefkisGr/live?autoplay=1&#39;,&#39;Ελληνική Ευαγγελική Εκκλησία Πεύκης&#39;,&#39;width=550,height=480&#39;)" />
+
+<input type="button" value="Ε.Ε. ΝΕΑ ΖΩΗ" onclick="window.open(&#39;https://www.youtube.com/channel/UC6wocgZwg0cOPiCDHktaCyg/live?autoplay=1&#39;,&#39;Ευαγγελική Εκκλησία Νέας Ζωής&#39;,&#39;width=480,height=400&#39;)" />
+
+<input type="button" value="Ελ.Ε.Ε. Νίκαιας" onclick="window.open(&#39;https://www.youtube.com/channel/UCgHQac9RYjy_tIDcNNqg30Q/live?autoplay=1&#39;,&#39;Ελεύθερη Ευαγγελική Εκκλησία Νίκαιας&#39;,&#39;width=480,height=400&#39;)" />
+
+<p><input type="button" value="Ε.Ε. Θεσ/νίκης" onclick="window.open(&#39;https://www.youtube.com/channel/UCwRAZEqrGUFjy2ZOqjwOYXg/live?autoplay=1&#39;,&#39;Ευαγγελική Εκκλησία θεσ/νίκης&#39;,&#39;width=480,height=400&#39;)" />
+
+<input type="button" value="Ε.Ε.Ε. Κατερίνης" onclick="window.open(&#39;https://www.youtube.com/channel/UCYiY4hYo5TZcByMV8_pzsfg/live?autoplay=1&#39;,&#39;Ελληνική Ευαγγελική Εκκλησία Κατερίνης&#39;,&#39;width=480,height=400&#39;)" />
+
+<input type="button" value="Ε.Ε.Ε. Πειραιά" onclick="window.open(&#39;https://www.youtube.com/channel/UCgmOX8ZbhpIRTiD6KJzeewQ/live?autoplay=1&#39;,&#39;Ελληνική Ευαγγελική Εκκλησία Πειραιά&#39;,&#39;width=480,height=400&#39;)" />
+
+<input type="button" value="Ε.Ε.Ε. Βόλου" onclick="window.open(&#39;https://www.youtube.com/channel/UCusu9HCsvYfbNPtA_W9KQ8A/live?autoplay=1&#39;,&#39;Ελληνική Ευαγγελική Εκκλησία Βόλου&#39;,&#39;width=480,height=400&#39;)" />
+
+<p> World Wide Christian Networks </p>
+
+<p><input type="button" value="Emmanuel TV" onclick="window.open(&#39;https://livestream.com/accounts/23202872/events/7200883/player?width=640&height=360&enableInfoAndActivity=true&defaultDrawer=&autoPlay=true&mute=false&#39;,&#39;Emmanuel TV&#39;,&#39;width=640,height=360&#39;)" />
+
+<input type="button" value="Prophetic Channel" onclick="window.open(&#39;https://www.youtube.com/channel/UCcbBHQXuSkw8Me1vnY-u4bw/live?autoplay=1&#39;,&#39;Prophetic Channel&#39;,&#39;width=550,height=480&#39;)" />
+
+<input type="button" value="GOD TV US" onclick="window.open(&#39;https://rawcdn.githack.com/grchannels/data/97c1b09cd0ec0b2e46e5c06d96e13463e1108a70/GOD_TV_US.html&#39;,&#39;GOD TV US&#39;,&#39;width=580,height=350&#39;)" />
+
+<input type="button" value="GOD TV UK" onclick="window.open(&#39;https://rawcdn.githack.com/grchannels/data/15c305f524bde853ef7e2cc795f3fecaf71fcda2/GOD_TV_UK.html&#39;,&#39;GOD TV UK&#39;,&#39;width=580,height=350&#39;)" />
+
+<input type="button" value="CYWN Live" onclick="window.open(&#39;https://swf.tulix.tv/iframe/wchangerslive/index.php&#39;,&#39;World Changers&#39;,&#39;width=580,height=350&#39;)" />
+
+<p><input type="button" value="TBN HD" onclick="window.open(&#39;https://watch.tbn.tv/videos/tbn-live&#39;,&#39;TBN HD&#39;,&#39;width=550,height=480&#39;)" />
+
+<input type="button" value="TBN UK" onclick="window.open(&#39;https://watch.tbn.tv/videos/tbn-uk&#39;,&#39;TBN UK&#39;,&#39;width=550,height=480&#39;)" />
+
+<input type="button" value="CBN NEWS" onclick="window.open(&#39;https://rawcdn.githack.com/grchannels/data/906113a59455132a33b33543431df613dbebe1bb/CBN_NEWS.html&#39;,&#39;CBN NEWS&#39;,&#39;width=580,height=350&#39;)" />
+
+<input type="button" value="CBN TV" onclick="window.open(&#39;https://www1.cbn.com/sites/all/libraries/html5player/html5player.php?applicationId=WIDGET_VOD&platform=embedded%20widget%20player&appName=embedded%20widget%20player&ads=true&auto_play=true&muted=false&videoId=5721815535001&#39;,&#39;CBN TV&#39;,&#39;width=580,height=350&#39;)" />
+
+<input type="button" value="Hillsong Channel" onclick="window.open(&#39;https://watch.tbn.tv/videos/hillsong-channel&#39;,&#39;Hillsong Channel&#39;,&#39;width=550,height=480&#39;)" />
+
+<input type="button" value="Spirit tv" onclick="window.open(&#39;https://rawcdn.githack.com/grchannels/data/10a3e094938b6944db52d2d1e1691948361a85dc/spirit_tv.html&#39;,&#39;Spirit tv&#39;,&#39;width=580,height=350&#39;)" />
+
+<p><input type="button" value="The Word Network" onclick="window.open(&#39;https://rawcdn.githack.com/grchannels/data/483aea31c2082380e1ea9d409a2f3c9b9901d53e/The_Word_Network.html&#39;,&#39;The Word Network&#39;,&#39;width=650,height=350&#39;)" />
 
 <input type="button" value="Christian Tv Network" onclick="window.open(&#39;https://rawcdn.githack.com/grchannels/data/abf2f385843d99385f0c44c98a1471b29b6b0a65/CTN.html&#39;,&#39;CTN&#39;,&#39;width=580,height=350&#39;)" />
 
@@ -200,9 +325,11 @@ autostart="1">
 
 <input type="button" value="Musik" onclick="window.open(&#39;https://rawcdn.githack.com/grchannels/data/b18637a11040d6c5d508d3bc600b457b2547a75b/Bibel_TV_Musik.html&#39;,&#39;Bibel TV&#39;,&#39;width=580,height=350&#39;)" />
 
-<p> <input type="button" value="Hungry Generation" onclick="window.open(&#39;https://www.youtube.com/channel/UCYcdUvf2OMAlFTIxZv2eduA/live?autoplay=1&#39;,&#39;Hungry Generation&#39;,&#39;width=480,height=400&#39;)" />
+<p><input type="button" value="GoodNews TV" onclick="window.open(&#39;https://rawcdn.githack.com/grchannels/data/bcaadf39105e822ebce358baa33362cbfa968bf2/GoodNews_TV.html&#39;,&#39;GoodNews TV&#39;,&#39;width=480,height=400&#39;)" />
 
-<input type="button" value="Ark Of God TV" onclick="window.open(&#39;https://rawcdn.githack.com/grchannels/data/fe615741e751d7e20397378383484a970c85337c/ARK_OF_GOD_TV.html&#39;,&#39;Ark Of God TV&#39;,&#39;width=580,height=350&#39;)" />
+<input type="button" value="Hungry Generation" onclick="window.open(&#39;https://www.youtube.com/channel/UCYcdUvf2OMAlFTIxZv2eduA/live?autoplay=1&#39;,&#39;Hungry Generation&#39;,&#39;width=480,height=400&#39;)" />
+
+<input type="button" value="Ark Of God TV" onclick="window.open(&#39;https://www.youtube.com/channel/UCzzl8hlH0hh1YHN9SOMkY0g/live?autoplay=1&#39;,&#39;Ark Of God TV&#39;,&#39;width=580,height=350&#39;)" />
 
 <a href='http://www.vivlos.net/audio/vivlos/01 GENESH.mp3' style='display:none;'> Π.Δ. -Δημοτική- ΓΕΝΕΣΗ</a>
 <a href='http://www.vivlos.net/audio/vivlos/02 EXODOS.mp3' style='display:none;'> Π.Δ. -Δημοτική- ΕΞΟΔΟΣ</a>
