--- a/index.html
+++ b/index.html
@@ -118,23 +118,25 @@ autostart="1">
 
 <input type="button" value="ΕΑΕΠ Περιστερίου" onclick="window.open(&#39;https://www.youtube.com/channel/UCEDColQ1D2bulOQ7yNTcZzg/live?autoplay=1&#39;,&#39;ΕΑΕΠ Περιστερίου&#39;,&#39;width=580,height=400&#39;)" />
 
-<p><input type="button" value="ΕΑΕΠ Νέου Ψυχικού" onclick="window.open(&#39;https://www.youtube.com/channel/UC5Vn3zA-RoBxmchuPVa9RNQ/live?autoplay=1&#39;,&#39;ΕΑΕΠ Αθηνών&#39;,&#39;width=550,height=480&#39;)" />
+<p><input type="button" value="ΕΑΕΠ Γλυφάδας" onclick="window.open(&#39;https://www.youtube.com/channel/UCJkUc3VAsJ3X2LQMKvAiKsw/live?autoplay=1&#39;,&#39;ΕΑΕΠ Αθηνών&#39;,&#39;width=550,height=480&#39;)" />
+
+<input type="button" value="ΕΑΕΠ Ν. Ψυχικού" onclick="window.open(&#39;https://www.youtube.com/channel/UC5Vn3zA-RoBxmchuPVa9RNQ/live?autoplay=1&#39;,&#39;ΕΑΕΠ Αθηνών&#39;,&#39;width=550,height=480&#39;)" />
 
 <input type="button" value="ΕΑΕΠ Ηλιούπολης" onclick="window.open(&#39;https://www.youtube.com/channel/UC3NGKgJgvRiHu4b0osTf-Lg/live?autoplay=1&#39;,&#39;ΕΑΕΠ Ηλιούπολης&#39;,&#39;width=550,height=480&#39;)" />
 
 <input type="button" value="ΕΑΕΠ Λευκωσίας" onclick="window.open(&#39;https://www.youtube.com/channel/UC-fb9xpm7qyKVwbcV2V8E1A/live?autoplay=1&#39;,&#39;ΕΑΕΠ Ηλιούπολης&#39;,&#39;width=550,height=480&#39;)" />
 
-<input type="button" value="ΕΑΕΠ Θέρμης" onclick="window.open(&#39;https://www.youtube.com/channel/UCCF4Iv4jCHWNleA7Dyi4QVA/live?autoplay=1&#39;,&#39;ΕΑΕΠ Θέρμης&#39;,&#39;width=530,height=550&#39;)" />
-
 <p><input type="button" value="ΕΑΕΠ Πτολεμαίων" onclick="window.open(&#39;https://www.youtube.com/channel/UCbbtMuQ-_Fwzl30ONKwvI2w/live?autoplay=1&#39;,&#39;The Christians&#39;,&#39;width=550,height=480&#39;)" />
+
+<input type="button" value="ΕΑΕΠ Θέρμης" onclick="window.open(&#39;https://www.youtube.com/channel/UCCF4Iv4jCHWNleA7Dyi4QVA/live?autoplay=1&#39;,&#39;ΕΑΕΠ Θέρμης&#39;,&#39;width=530,height=550&#39;)" />
 
 <input type="button" value="Εκ. Βέροιας" onclick="window.open(&#39;https://www.youtube.com/channel/UCbzHj-1cyPcmYFbk2oBnkVA/live?autoplay=1&#39;,&#39;39;Ε. Βέροιας&#39;,&#39;width=550,height=480,top=100&#39;)" />
 
 <input type="button" value="Χρ. Εκ. Αθηνών" onclick="window.open(&#39;https://www.youtube.com/channel/UCoxKzreDVYLJ9iqzYmY1Vbg/live?autoplay=1&#39;,&#39;Χρ. Εκ. Αθηνών&#39;,&#39;width=550,height=480&#39;)" />
 
-<input type="button" value="Απ. Εκ. του Χριστού" onclick="window.open(&#39;https://www.youtube.com/channel/UC-YSxzA5VmsHr9zO1IZrRbQ/live?autoplay=1&#39;,&#39;Απ. Εκ. του Χριστού&#39;,&#39;width=550,height=480&#39;)" />
+<p><input type="button" value="Απ. Εκ. του Χριστού" onclick="window.open(&#39;https://www.youtube.com/channel/UC-YSxzA5VmsHr9zO1IZrRbQ/live?autoplay=1&#39;,&#39;Απ. Εκ. του Χριστού&#39;,&#39;width=550,height=480&#39;)" />
 
-<p><input type="button" value="Ελ. Χρ. Εκ." onclick="window.open(&#39;https://www.youtube.com/channel/UCmXznSE7o9WamWOUVtWGfZw/live?autoplay=1&#39;,&#39;39;Ελληνική Χριστιανική Εκκλησία.&#39;,&#39;width=550,height=450&#39;)" />
+<input type="button" value="Ελ. Χρ. Εκ." onclick="window.open(&#39;https://www.youtube.com/channel/UCmXznSE7o9WamWOUVtWGfZw/live?autoplay=1&#39;,&#39;39;Ελληνική Χριστιανική Εκκλησία.&#39;,&#39;width=550,height=450&#39;)" />
 
 <input type="button" value="Logos Church" onclick="window.open(&#39;https://www.youtube.com/channel/UC7zSdR2P29r-KSNnQASJfPA/live?autoplay=1&#39;,&#39;Logos Church&#39;,&#39;width=550,height=480&#39;)" />
 
@@ -180,11 +182,11 @@ autostart="1">
 
 <input type="button" value="Spirit tv" onclick="window.open(&#39;https://rawcdn.githack.com/grchannels/data/10a3e094938b6944db52d2d1e1691948361a85dc/spirit_tv.html&#39;,&#39;Spirit tv&#39;,&#39;width=580,height=350&#39;)" />
 
-<p><input type="button" value="The Word Network" onclick="window.open(&#39;https://rawcdn.githack.com/grchannels/data/483aea31c2082380e1ea9d409a2f3c9b9901d53e/The_Word_Network.html&#39;,&#39;The Word Network&#39;,&#39;width=650,height=350&#39;)" />
+<p><input type="button" value="The Word Network" onclick="window.open(&#39;https://rawcdn.githack.com/grchannels/data/6fb68e9ec94cc1b53c10dc3a14ebae5343cff250/The_Word_Network.html&#39;,&#39;The Word Network&#39;,&#39;width=650,height=350&#39;)" />
 
 <input type="button" value="Christian Tv Network" onclick="window.open(&#39;https://rawcdn.githack.com/grchannels/data/abf2f385843d99385f0c44c98a1471b29b6b0a65/CTN.html&#39;,&#39;CTN&#39;,&#39;width=580,height=350&#39;)" />
 
-<input type="button" value="Daystar" onclick="window.open(&#39;https://rawcdn.githack.com/grchannels/data/abf2f385843d99385f0c44c98a1471b29b6b0a65/Daystar.html&#39;,&#39;Daystar&#39;,&#39;width=580,height=350&#39;)" />
+<input type="button" value="Daystar" onclick="window.open(&#39;https://embed.vhx.tv/videos/632434?api=1&autoplay=1&title=0&#39;,&#39;Daystar&#39;,&#39;width=580,height=350&#39;)" />
 
 <input type="button" value="Lakewood Church" onclick="window.open(&#39;https://rawcdn.githack.com/grchannels/data/abf2f385843d99385f0c44c98a1471b29b6b0a65/Lakewood_Church.html&#39;,&#39;Lakewood Church&#39;,&#39;width=580,height=350&#39;)" />
 
@@ -202,11 +204,81 @@ autostart="1">
 
 <input type="button" value="Musik" onclick="window.open(&#39;https://rawcdn.githack.com/grchannels/data/b18637a11040d6c5d508d3bc600b457b2547a75b/Bibel_TV_Musik.html&#39;,&#39;Bibel TV&#39;,&#39;width=580,height=350&#39;)" />
 
-<p><input type="button" value="GoodNews TV" onclick="window.open(&#39;https://rawcdn.githack.com/grchannels/data/bcaadf39105e822ebce358baa33362cbfa968bf2/GoodNews_TV.html&#39;,&#39;GoodNews TV&#39;,&#39;width=480,height=400&#39;)" />
 
-<input type="button" value="Hungry Generation" onclick="window.open(&#39;https://www.youtube.com/channel/UCYcdUvf2OMAlFTIxZv2eduA/live?autoplay=1&#39;,&#39;Hungry Generation&#39;,&#39;width=480,height=400&#39;)" />
+<p><input type="button" value="Hungry Generation" onclick="window.open(&#39;https://www.youtube.com/channel/UCYcdUvf2OMAlFTIxZv2eduA/live?autoplay=1&#39;,&#39;Hungry Generation&#39;,&#39;width=480,height=400&#39;)" />
 
 <input type="button" value="Ark Of God TV" onclick="window.open(&#39;https://www.youtube.com/channel/UCzzl8hlH0hh1YHN9SOMkY0g/live?autoplay=1&#39;,&#39;Ark Of God TV&#39;,&#39;width=580,height=350&#39;)" />
+
+
+<!--                                                       "  B      A      C      K      U      P  "                                        -->
+
+<!-- <input type="button" value="GoodNews TV" onclick="window.open(&#39;https://rawcdn.githack.com/grchannels/data/bcaadf39105e822ebce358baa33362cbfa968bf2/GoodNews_TV.html&#39;,&#39;GoodNews TV&#39;,&#39;width=480,height=400&#39;)" /> -->
+
+
+<!-- <a href="https://cdn.rawgit.com/grchannels/data/e53aeddd/GODradio.html" target="_blank" onclick="window.open(this.href, this.target, 'width=350, height=100, resizable=yes, location=yes'); return false;">| GodRadio |</a> -->
+
+<!-- <input type="button" value="ΕΑΕΠ Καλλιθέας" onclick="window.open(&#39;https://rawcdn.githack.com/grchannels/data/abf2f385843d99385f0c44c98a1471b29b6b0a65/eaep-kalitheas.html&#39;,&#39;ΕΑΕΠ Καλλιθέας II&#39;,&#39;width=660,height=400&#39;)" /> -->
+
+<!-- <input type="button" value="Ελ.Ε.Ε. Πειραιά" onclick="window.open(&#39;http://cdn.livestream.com/grid/LSPlayer.swf?channel=evangelicalchurch&clip=&time=&showMoreVideos=false&hideInfo=true&autoPlay=true&lschannel=true&browseMode=false&textLines=2&hideChannelBranding=true&mode=false&allowchat=false&t=578146&#39;,&#39;Ελεύθερη Ευαγγελική Εκκλησία Πειραιά&#39;,&#39;width=450,height=380&#39;)" /> -->
+
+<!--  <input type="button" value="Ε.Ε.Ε. Νίκαιας" onclick="window.open(&#39;https://www.youtube.com/channel/UC1nEYjTEXTI64bd_Y-gd8tw/live?autoplay=1&#39;,&#39;Ελληνική Ευαγγελική Εκκλησία Νίκαιας&#39;,&#39;width=480,height=400&#39;)" /> -->
+
+<!-- <input type="button" value="Ε.Ε. Λάρισας" onclick="window.open(&#39;http://original.livestream.com/eeel&#39;,&#39;Ευαγγελική Εκκλησία Λάρισας&#39;,&#39;width=650,height=680&#39;)" /> -->
+
+<!-- <input type="button" value="Ε.Ε. Δράμας" onclick="window.open(&#39;http://original.livestream.com/eeedramas&#39;,&#39;Ευαγγελική Εκκλησία Δράμας&#39;,&#39;width=650,height=680&#39;)" /> -->
+
+<!-- <input type="button" value="Ανάσταση TV" onclick="window.open(&#39;http://www.livestream.com/anastasitv&#39;,&#39;Ανάσταση TV&#39;,&#39;width=650,height=680&#39;)" />  -->
+
+<!-- <input type="button" value="Christian Truth" onclick="window.open(&#39;http://cdn.livestream.com/grid/LSPlayer.swf?channel=ct_radio&clip=&time=&showMoreVideos=false&hideInfo=true&autoPlay=true&lschannel=true&browseMode=false&textLines=2&hideChannelBranding=true&mode=false&allowchat=false&t=578146&#39;,&#39;Ράδιο Χριστιανική Αλήθεια&#39;,&#39;width=660,height=380&#39;)" /> -->
+
+<!-- <input type="button" value="Logos Church" onclick="window.open(&#39;http://original.livestream.com/newchannel/popoutplayer?channel=logoschurchgr&#39;,&#39;Εκ. Ο Ζωντανός Λόγος&#39;,&#39;width=500,height=380&#39;)" /> -->
+
+<!-- <input type="button" value="Bible Live" onclick="window.open(&#39;http://original.livestream.com/newchannel/popoutplayer?channel=biblelivegr&#39;,&#39;Bible Live&#39;,&#39;width=500,height=380&#39;)" /> -->
+
+<!-- <a href="http://cdn.rawgit.com/grchannels/data/71d38d86/Radio%20EKXE.html" target="_blank" onclick="window.open(this.href, this.target, 'top=0, left=0, height=240, width=550, resizable=yes, location=yes'); return false;">| Ράδιο EKXE |</a> -->
+
+<!-- <input type="button" value="Smile" onclick="window.open(&#39;https://cdn.rawgit.com/grchannels/data/00fafe20/SMILE.html&#39;,&#39;Smile&#39;,&#39;width=580,height=350&#39;)" /> -->
+
+<!-- <input type="button" value="Prophetic Channel" onclick="window.open(&#39;https://www.youtube.com/channel/UCcbBHQXuSkw8Me1vnY-u4bw/live?autoplay=1&#39;,&#39;Prophetic Channel&#39;,&#39;width=550,height=480&#39;)" /> -->
+
+<!-- <input type="button" value="CBN TV" onclick="window.open(&#39;http://www1.cbn.com/sites/all/libraries/html5player/html5player.php?applicationId=WIDGET_VOD&platform=embedded%20widget%20player&appName=embedded%20widget%20player&ads=true&auto_play=true&muted=false&videoId=4932857782001&#39;,&#39;CBN&#39;,&#39;width=550,height=380&#39;)" /> -->
+
+<!-- <input type="button" value="ΕΑΕΠ Περιστερίου" onclick="window.open(&#39;http://streaming.evangelized.net/youtube_peristeri.php&#39;,&#39;ΕΑΕΠ Περιστερίου&#39;,&#39;width=580,height=400&#39;)" /> -->
+
+<!-- <input type="button" value="Prophetic Channel" onclick="window.open(&#39;https://www.youtube.com/channel/UCcbBHQXuSkw8Me1vnY-u4bw/live?autoplay=1&#39;,&#39;Prophetic Channel&#39;,&#39;width=550,height=480&#39;)" /> -->
+
+<!-- <input type="button" value="Emmanuel TV" onclick="window.open(&#39;https://www.youtube.com/channel/UCYPyAh4PaRbaTTXwGP_XmzA/live?autoplay=1&#39;,&#39;Emmanuel TV UT&#39;,&#39;width=550,height=480&#39;)" /> -->
+
+<!-- <input type="button" value="Prophetic Channel" onclick="window.open(&#39;https://play.streamshark.io/r/l/boebvwyju/propheticchannelfinal/embed&#39;,&#39;Prophetic Channel&#39;,&#39;width=500,height=350&#39;)" /> -->
+
+<!-- <input type="button" value="Prophetic Channel" onclick="window.open(&#39;https://www.youtube.com/channel/UCcbBHQXuSkw8Me1vnY-u4bw/live?autoplay=1&#39;,&#39;Prophetic Channel&#39;,&#39;width=550,height=480&#39;)" /> -->
+
+<!-- <input type="button" value="ArkofGod.TV" onclick="window.open(&#39;https://cdn.rawgit.com/grchannels/data/20636934/ArkofGod%20Tv.html&#39;,&#39;ArkofGod.TV&#39;,&#39;width=660,height=380&#39;)" /> -->
+
+<!-- <input type="button" value="ΕΑΕΠ Νέου Ψυχικού" onclick="window.open(&#39;https://cdn.rawgit.com/grchannels/data/053c7882/eaep-neo_psixiko.html&#39;,&#39;ΕΑΕΠ Νέου Ψυχικού&#39;,&#39;width=640,height=400&#39;)" /> -->
+
+<!-- <input type="button" value="Radio CT" onclick="window.open(&#39;http://cdn.livestream.com/grid/LSPlayer.swf?channel=ct_radio&clip=&time=&showMoreVideos=false&hideInfo=true&autoPlay=true&lschannel=true&browseMode=false&textLines=2&hideChannelBranding=true&mode=false&allowchat=false&t=578146&#39;,&#39;Ράδιο Χριστιανική Αλήθεια&#39;,&#39;width=660,height=380&#39;)" /> -->
+
+<!-- <input type="button" value="Web Tv Faros" onclick="window.open(&#39;http://cdn.livestream.com/grid/LSPlayer.swf?channel=webtvfaros&clip=&time=&color=0x006ccd&autoPlay=true&mute=false&iconColorOver=0xe4f2ff&iconColor=0xb5dcff&allowchat=false&height=314&width=222&#39;,&#39;Web Tv Faros&#39;,&#39;width=500,height=380&#39;)" /> -->
+
+<!-- <input type="button" value="Prophetic Channel" onclick="window.open(&#39;https://www.youtube.com/channel/UCcbBHQXuSkw8Me1vnY-u4bw/live?autoplay=1&#39;,&#39;Prophetic Channel&#39;,&#39;width=550,height=480&#39;)" /> -->
+
+<!-- <input type="button" value="ArkofGod.TV" onclick="window.open(&#39;https://www.youtube.com/channel/UCzzl8hlH0hh1YHN9SOMkY0g/live?autoplay=1&#39;,&#39;ArkofGod.TV&#39;,&#39;width=750,height=350&#39;)" /> -->
+
+<!-- <input type="button" value="Emmanuel TV" onclick="window.open(&#39;http://emmanuel.tv/&#39;,&#39;Emmanuel TV&#39;,&#39;top=100,left=100,width=600,height=700&#39;)" /> -->
+
+<!-- <input type="button" value="Emmanuel TV -VLC Player-" onclick="window.open(&#39;http://118965-lh.akamaihd.net/etv_live_500@74820?bandwidthEstimationTest=true&v=3.3.0&fp=WIN 15,0,0,189&r=LJPQX&g=UKIOCLKFRKBC&#39;,&#39;Emmanuel TV&#39;,&#39;width=660,height=380&#39;)" /> -->
+
+<!-- <input type="button" value="Prophetic Channel" onclick="window.open(&#39;https://play.streamshark.io/r/l/boebvwyju/propheticchannelfinal/embed&#39;,&#39;Prophetic Channel&#39;,&#39;width=1220,height=760&#39;)" /> -->
+
+<!-- <a href="http://www.radio7.gr:8000/48kbps.m3u" target="_blank" onclick="window.open(this.href, this.target, 'width=350, height=100, resizable=yes, location=yes'); return false;">| Radio7 |</a> -->
+
+<!-- <input type="button" value="Α & Ω (Ματθαίος Π.)" onclick="window.open(&#39;http://original.livestream.com/alfakaiomega&#39;)" /> -->
+
+<!-- <input type="button" value="Apokalipsi Web TV" onclick="window.open(&#39;http://www.ustream.tv/embed/12525740&#39;,&#39;Διαδικτυακή τηλεόραση - WEB TV&#39;,&#39;width=450,height=300&#39;)" /> -->
+
+<!--  <input type="button" value=" Radio Αποκάλυψη" onclick="window.open(&#39;http://original.livestream.com/newchannel/popoutplayer?channel=radioapokalipsi&#39;,&#39;Radio Αποκάλυψη&#39;,&#39;width=500,height=380&#39;)" />  -->
+</p></p></p></p></p></p></p></p></p></p></p></p></p></p></p></p></p></p></div></div>
 
 <a href='http://www.vivlos.net/audio/vivlos/01 GENESH.mp3' style='display:none;'> Π.Δ. -Δημοτική- ΓΕΝΕΣΗ</a>
 <a href='http://www.vivlos.net/audio/vivlos/02 EXODOS.mp3' style='display:none;'> Π.Δ. -Δημοτική- ΕΞΟΔΟΣ</a>
