--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
 <meta charset=utf-8 />
+<body bgcolor="#E6E6FA">
 <div style="float:center">
 <div align=center>
 <iframe src="http://free.timeanddate.com/clock/i3czrg9v/n1428/tlgr17/fn17/tct/pct/tt0" frameborder="0" width="347" height="19" allowtransparency="true"></iframe>
