--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
-<meta charset=utf-8 />
+<html>
 <body bgcolor="#E6E6FA">
+<meta charset=utf-8 />
 <div style="float:center">
 <div align=center>
 <iframe src="http://free.timeanddate.com/clock/i3czrg9v/n1428/tlgr17/fn17/tct/pct/tt0" frameborder="0" width="347" height="19" allowtransparency="true"></iframe>
@@ -546,3 +547,7 @@ autostart="1">
 <a href='http://vivlos.net/audio/Kaini/27_APOKALYPSH IOANNOY/APOKALYPSH IOANNOY_22.mp3' style='display:none;'> Κ.Δ. -Δημοτική- ΑΠΟΚΑΛΥΨΗ ΙΩΑΝΝΗ</a>
 <a href='http://vivlos.net/audio/Kaini/_ANAGNOSTHS/THE READER ENG.mp3' style='display:none;'> Κ.Δ. -Δημοτική- THE READER</a>
 <a href='http://vivlos.net/audio/Kaini/_ANAGNOSTHS/__O ANAGNOSTHS.mp3' style='display:none;'> Κ.Δ. -Δημοτική- Ο ΑΝΑΓΝΩΣΤΗΣ</a>
+	
+</body>
+</html>
+	
